# adventofcode

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
aoc2021/day01/: solution.py  test_solution.py
aoc2021/day02/: solution.py  test_solution.py
aoc2021/day03/: test_solution.py
aoc2022/day03/: solution.py
aoc2022/day04/: test_solution.py
aoc2022/day06/: test_solution.py
aoc2022/day07/: test_solution.py
aoc2022/day10/: solution.py
aoc2022/day12/: solution.py
aoc2022/day13/: input.txt
aoc2022/day15/: solution.py
aoc2022/day16/: test_solution.py
aoc2022/day21/: solution.py
aoc2023/: aoc_helper.py
aoc2023/day01/: solution.py  test_solution.py
aoc2023/dayXX/: solution.py  test_solution.py
day01/: solution.py  test_solution.py
day02/: solution.py  test_solution.py
day03/: solution.py  test_solution.py
day04/: solution.py
day05/: solution.py  test_solution.py
day07/: solution.py
day08/: test_solution.py
day09/: solution.py  test_solution.py
day11/: solution.py  test_solution.py
day12/: solution.py  solution2.py  solution3.py  test_solution.py
day13/: solution.py  solution2.py
day14/: solution.py
day15/: test_solution.py
day16/: solution.py
day17/: solution.py  test_solution.py
day18/: solution.py
day19/: solution.py  test_solution.py
day20/: test_solution.py
day21/: test_solution.py
day22/: solution.py
day23/: test_solution.py
day24/: solution.py
src/aoc2021/day01/: solution.py
src/aoc2021/day02/: test_solution.py
src/aoc2022/day06/: solution.py
src/aoc2022/day08/: solution.py  test_solution.py
src/aoc2022/day10/: test_solution.py
src/aoc2022/day13/: test_solution.py
src/aoc2022/day14/: test_solution.py
src/aoc2022/day18/: test_solution.py
src/aoc2022/day20/: solution.py
src/aoc2022/day22/: test_solution.py
src/aoc2022/day23/: solution.py
src/aoc2022/day24/: test_solution.py
src/aoc2022/day25/: solution.py  test_solution.py
src/aoc2023/day02/: solution.py  test_solution.py
src/aoc2023/dayXX/: solution.py  test_solution.py
src/py_adventofcode/: _version.py  config.py  utilities.py
src/py_adventofcode/aoc2024/day01/: task.py
src/py_adventofcode/aoc2024/day02/: task.py
src/ts_adventofcode/: package-lock.json  package.json  tsconfig.json
src/ts_adventofcode/day01/: solution.js  solution.ts
